# mujoco-continuous-control

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: ant.yaml  humanoid.yaml  smoke_test.yaml  walker2d.yaml
mujoco_continuous_control/: __init__.py
scripts/: summarize_results.py
src/mujoco_continuous_control/: __init__.py  checkpointing.py  distributions.py  envs.py  evaluate.py  gae.py  models.py  normalization.py  plotting.py  ppo.py  record_video.py  rollout.py  train.py
tests/: test_checkpointing.py  test_env_factory.py  test_evaluate.py  test_gae.py  test_normalization.py  test_plotting.py  test_ppo_shapes.py  test_ppo_update.py  test_record_video.py  test_rollout.py  test_squashed_gaussian.py  test_train.py
